Prevent horizontal scrollbar in IE7.

--- a/css/structure/jquery.mobile.forms.fieldcontain.css
+++ b/css/structure/jquery.mobile.forms.fieldcontain.css
@@ -13,6 +13,8 @@
 	right: 1em;
 }
 
+.ui-field-contain, .ui-mobile fieldset.ui-field-contain { width: 100%; } /* This prevents horizontal scrollbar in IE7 */
+
 @media all and (min-width: 450px){
 	.ui-field-contain, .ui-mobile fieldset.ui-field-contain { border-width: 0; padding: 0; margin: 1em 0; }
 }
